<resources>
    <string name="app_name">Shirt Store</string>
    <string name="default_shirt_type">Oxford Shirt</string>
    <string name="default_quantity">0</string>
    <string name="default_price">100</string>
    <string name="default_weight">100 gm</string>
    <string name="filter_by_size">Filter by Size</string>
    <string name="filter_by_color">Filter by Color</string>
    <string name="add_shopping_cart">Shopping Cart</string>
    <string name="pref_display_grid">pref_display_grid</string>
    <string name="add_cart">Add Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="action_settings">Settings</string>
    <string name="display_in_grid">Display in grid</string>
    <string name="display_all">Display all</string>
    <string name="total">Total Price </string>
    <string name="total_price">1000</string>
    <string name="total_quantity">10</string>

    <string-array
        name="colour">
        <item>brown</item>
        <item>green</item>
        <item>blue</item>
        <item>black</item>
        <item>string</item>
    </string-array>
    <string-array
        name="size">
        <item>m</item>
        <item>1</item>
        <item>s</item>
        <item>x-large</item>
        <item>string</item>
    </string-array>
</resources>
