<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kumar.shirtstore.ShoppingCart">

    <ImageView
        android:id="@+id/cart_minus_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_minus"
        android:typeface="sans"
        android:layout_alignBottom="@+id/from_name" />

    <TextView
        android:id="@+id/from_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#040404"
        android:text="@string/default_shirt_type"
        android:textSize="15dip"
        android:typeface="sans"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/cart_minus_img"
        android:layout_toEndOf="@+id/cart_minus_img" />

    <TextView
        android:id="@+id/plist_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_price"
        android:textColor="#040404"
        android:textSize="15dip"
        android:typeface="sans"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/cart_product_quantity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_quantity"
        android:textColor="#040404"
        android:textSize="15dip"
        android:typeface="sans"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/total_quantity"
        android:layout_toEndOf="@+id/total_quantity"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp" />

    <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:text="@string/total"
            android:textSize="15dip"
            android:typeface="sans"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/total_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_quantity"
        android:textColor="#040404"
        android:textSize="15dip"
        android:typeface="sans"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textColor="#040404"
        android:textSize="15dip"
        android:typeface="sans"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>